Fix tab wrapping issue

--- a/polaris.shopify.com/src/components/TokensPage/TokensPage.module.scss
+++ b/polaris.shopify.com/src/components/TokensPage/TokensPage.module.scss
@@ -37,6 +37,8 @@
 
   li {
     flex: 1;
+    // Temporality adding this style until v11 ships and we get rid of the depth token group
+    min-width: 125px;
   }
 
   a {
